changes for the checkout

--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -27,7 +27,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart - shippingcharges}}</th>
+                  {{totalcart}}</th>
               </thead>
             </table>
           </div>
@@ -81,7 +81,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart - shippingcharges}}</th>
+                  {{totalcart}}</th>
               </thead>
             </table>
           </div>
@@ -368,7 +368,7 @@
                 <th>subtotal: rs.
                   {{totalcart - shippingcharges}}</th>
                 <th>grandtotal: rs.
-                  {{totalcart - shippingcharges}}</th>
+                  {{totalcart}}</th>
               </thead>
             </table>
           </div>
@@ -462,7 +462,7 @@
                 <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
                   <span class="pull-right text-uppercase">Rs.
-                    {{totalcart }}</span>
+                    {{totalcart}}</span>
                 </div>
 
                 <div class="shipping">
