changes from wohlig server to the new server

--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -492,7 +492,7 @@
               <p class="brand-primary letter-space" ng-show="cod">Thank you for Shopping with us</p>
               <h3 class="brand-primary letter-space" ng-hide="cod">Payment Details</h3>
               <div class="payment-detail">
-                <form method="post" name="customerData" ng-hide="cod" action="http://moviewsapp.com/selfcare/paymentgateway/Checkout.php">
+                <form method="post" name="customerData" ng-hide="cod" action="http://admin.selfcareindia.com/paymentgateway/Checkout.php">
                   <div class="row">
                     <div class="col-md-6">
                       <table>
@@ -517,7 +517,7 @@
                         <tr style="display:none">
                           <td>Redirect URL :</td>
                           <td>
-                            <input type="text" name="Redirect_Url" value="http://moviewsapp.com/selfcare/index.php/json/payumoneysuccess"/>
+                            <input type="text" name="Redirect_Url" value="http://admin.selfcareindia.com/index.php/json/payumoneysuccess"/>
                           </td>
                         </tr>
                         <tr>
