--- a/views/profile.html
+++ b/views/profile.html
@@ -1,9 +1,9 @@
 <div class="profile-tab">
   <div class="account-tab">
     <div class="nav nav-tabs">
-      <li><a ui-sref="account" class="text-uppercase">My Profile</a></li>
-      <li><a ui-sref="orderlist" class="text-uppercase">Orderlist</a></li>
-      <li><a ui-sref="plans" class="text-uppercase">My Plans</a></li>
+      <li><a ui-sref="account" class="text-uppercase active-profile">My Profile</a></li>
+      <li><a ui-sref="orderlist" class="text-uppercase active-order">Orderlist</a></li>
+      <li><a ui-sref="plans" class="text-uppercase active-plan">My Plans</a></li>
     </div>
   </div>
 </div>
