--- a/views/footer.html
+++ b/views/footer.html
@@ -119,7 +119,7 @@
                   </span>
                 </button>
               </div>
-              
+
 
             </form>
             <h4 class="text-center" ng-show="subsresponse">
@@ -162,6 +162,7 @@
               |
               <a href="#/termsandcondition" class="brand-brown-dark">T&amp;C</a>
             </p>
+            <p>Designed by <a href="http://www.ting.in" class="brand-primary-lighter ting" target="_blank">Ting</a>.</p>
           </div>
         </div>
       </div>
