--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1709,6 +1709,9 @@ footer {
     }
   }
 }
+.ting {
+  &:focus { color: $brand-primary-lighter; }
+}
 .health-foot {
   .health-back {
     min-height: 150px;
