--- a/views/content/home.html
+++ b/views/content/home.html
@@ -115,8 +115,8 @@
 <div class="brand-brown-bg section-story">
   <div class="container">
     <div class="slider brand-brown-light-bg">
-   <uib-carousel interval="myInterval" no-wrap="noWrapSlides" ng-animate="{'slide':true}" active="active">
-        <uib-slide ng-repeat="slide in homestory " index="slide.id">
+   <uib-carousel interval="myInterval" no-wrap="noWrapSlides" ng-animate="{'slide':true}">
+        <uib-slide ng-repeat="slide in homestory" index="slide.id"> 
           <div class="row">
             <div class="col-md-6">
               <div class="story-video">
