--- a/views/content/account.html
+++ b/views/content/account.html
@@ -19,7 +19,7 @@
                 <div class="account-name">
                   <form ng-submit="editProfile(1)">
                     <button class="pull-right edit" type="submit">{{profile.nameemailedit}}</button>
-                    <p>Name:{{user}}
+                    <p>Name:
                       <span>{{user.name}}</span>
                     </p>
                     <p>Email:
