--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -12,10 +12,10 @@
         <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
       </div>
       <div class="account-tab">
-        <div class="relate no-plan" ng-if="msg! == ''">
+        <div class="relate no-plan" ng-if="msg !== ''">
           <h3 class="get-center brand-brown-dark">{{msg}}</h3>
         </div>
-        <div class="order-tab">
+        <div class="order-tab" ng-if="orders.length != 0">
           <div class="cart-table">
             <table class="table">
               <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
