--- a/views/footer.html
+++ b/views/footer.html
@@ -162,7 +162,7 @@
               |
               <a href="#/termsandcondition" class="brand-brown-dark">T&amp;C</a>
             </p>
-            <p>Designed by <a href="http://www.ting.in" class="brand-primary-lighter ting" target="_blank">Ting</a>.</p>
+            <p>Designed by <a href="http://www.ting.in" class="brand-primary-lighter ting text-uppercase" target="_blank">Ting</a>.</p>
           </div>
         </div>
       </div>
