--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2901,7 +2901,7 @@ footer {
   }
 }
 .account-tab {
-  margin: 20px 0 0;
+  margin: 20px 0 30px;
   .nav-tabs {
     border: none;
     text-align: center;
