--- a/views/content/plans.html
+++ b/views/content/plans.html
@@ -13,7 +13,7 @@
       </div>
       <div class="account-tab">
         <div class="relate no-plan" ng-if="msg !== ''">
-          <h3 class="get-center brand-brown-dark">{{msg}}</h3>
+          <h3 class="get-center brand-brown-dark m-clear">{{msg}}</h3>
         </div>
         <div class="order-tab" ng-if="plan.length != 0">
           <div class="cart-table">
