--- a/views/content/account.html
+++ b/views/content/account.html
@@ -50,15 +50,15 @@
                     <div ng-if="profile.changepasswordedit=='save'">
                       <div class="form-group">
                         <label>Old Password</label>
-                        <input class="form-control" ng-model="password.oldpassword" type="password">
+                        <input class="form-control" ng-model="password.oldpassword" required type="password">
                       </div>
                       <div class="form-group">
                         <label>New Password</label>
-                        <input class="form-control" ng-model="password.newpassword" type="password">
+                        <input class="form-control" ng-model="password.newpassword" required type="password">
                       </div>
                       <div class="form-group">
                         <label>Re-enter Password</label>
-                        <input class="form-control" ng-model="password.confirmpassword" type="password">
+                        <input class="form-control" ng-model="password.confirmpassword" required type="password">
                       </div>
                     </div>
                   </form>
