--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -87,7 +87,7 @@
                 Invalid email or password.
               </div>
               <div class="text-center">
-                <a class="" ng-click="openForgot();">Forgot Password</a>
+                <a class="" ng-click="openForgot();">Forgot Password?</a>
               </div>
               <div class="text-center submit">
                 <button class="text-uppercase btn btn-primary" type="submit" ng-click="doLogin(login,loginForm)">Sign in</button>
