thankyou wentwrong changes

--- a/views/content/thankyou.html
+++ b/views/content/thankyou.html
@@ -20,7 +20,7 @@
           <div class="col-md-4">
             <div class="put-center">
               <h3 class="text-uppercase ty-detail1 text-bold letter-space brand-brown-dark">Total Amount:</h3>
-              <span class="text-uppercase ty2 transaction btn btn-primary letter-space">Rs. {{order.amount.amount}}</span>
+              <span class="text-uppercase ty2 transaction btn btn-primary letter-space">Rs. {{order.amount}}</span>
             </div>
           </div>
         </div>
