--- a/views/content/plans.html
+++ b/views/content/plans.html
@@ -15,9 +15,9 @@
         <div class="relate no-plan" ng-if="msg !== ''">
           <h3 class="get-center brand-brown-dark m-clear">{{msg}}</h3>
         </div>
-        <div class="order-tab" ng-if="plan.length != 0">
+        <div class="order-tab" ng-if="plans.length != 0">
           <div class="cart-table">
-            <table class="table" ng-if="plan.length > 0">
+            <table class="table" ng-if="plans.length > 0">
               <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
                 <tr>
                   <th class="text-center">Order id</th>
@@ -26,7 +26,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr class="text-center letter-space font-semibold" ng-repeat="product in plan">
+                <tr class="text-center letter-space font-semibold" ng-repeat="product in plans">
                   <td>
                     <span>{{product.order}}</span>
                   </td>
@@ -48,12 +48,7 @@
                     <p>RS. {{product.price}}</p>
                   </div>
                   </td>
-                  <td>
-                    <div class="cart-total-amount">
-                    <p ng-if="product.status==3">RS. {{product.price}}</p>
-                  </div>
-
-                  </td>
+                  
                 </tr>
               </tbody>
             </table>
