--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -61,7 +61,7 @@
             <br>
             <span>Kolkata - 700 026</span>
             <br>
-            <span>t: <a href="tel:03340708154">033-40708154</a> , <a href="tel: 03364571113"> 033-64571113</a></span>
+            <span>t: <a href="tel: 03364571113"> 033-64571113</a></span>
             <br>
             <a  target="_blank" class="text-uppercase brand-teal" ng-click="map=3">View On Map</a>
           </div>
