--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -67,7 +67,7 @@
                     </div>
                   </td>
                   <td>-</td>
-                  <td>
+                  <td style="vertical-align:middle !important;">
                     <div class="cart-amount">
                     <p>RS. {{product.price}}</p>
                   </div>
