--- a/views/content/team.html
+++ b/views/content/team.html
@@ -343,7 +343,7 @@
         </div>
       </div>
 
-      <div class="single-member">
+      <!-- <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
@@ -360,7 +360,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
