--- a/views/content/plans.html
+++ b/views/content/plans.html
@@ -43,12 +43,12 @@
                       </h5>
                     </div>
                   </td>
-                  <td>
+                  <td style="vertical-align:middle !important">
                     <div class="cart-amount">
                     <p>RS. {{product.price}}</p>
                   </div>
                   </td>
-                  
+
                 </tr>
               </tbody>
             </table>
