done final wala change

--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -690,7 +690,7 @@
                 <p class="text-justify">A girl with amazing fashion sense. Instead of writing something about you I would like to be honest and confess the changes you brought in my fashion sense. You made me realise rather than running after and spending huge amount of money
                   on fashionable designer clothes, it is important to have good physic. Your skill in fixing &amp; matching out of existing clothes &amp; taking care of pocket is well appreciated. I would like to mention that my fashion sense right from
                   head to toe has been very well taken care by you.</p>
-                <h3 class="name brand-primary m-clear hidden-xs">Amruta Mauskar</h3>
+                <h3 class="name brand-primary m-clear hidden-xs">Amruta Mapuskar</h3>
                 <h4 class="profession brand-primary m-clear hidden-xs">Profesional and Dancer</h4>
               </div>
             </div>
