is baarr paka change khtm

--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -42,7 +42,7 @@
                   <td>
                     <span>{{order.quantity}}</span>
                   </td>
-                  <td>
+                  <td  style="vertical-align:middle !important;">
                     <div class="cart-total-amount">
                       <p>RS. {{order.price}}</p>
                     </div>
