--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -141,6 +141,11 @@
     margin: 0;
     @include padding(12px 20px);
   }
+  .contact-location .clinic span {
+    width: 90%;
+    margin: 0 auto;
+    font-size: 28px;
+  }
   .user-login {
     width: auto;
     padding: 0 25px;
@@ -433,7 +438,7 @@
   }
   .various .circle { width: 7%; }
   //contactUs
-  .contact-location .clinic span { font-size: 25px; }
+  .contact-location .clinic span { font-size: 21px; }
   // contactusend
   // ailment control
   .pregnancy .consult-chart .noconsult { font-size: 18px; }
