--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -11,7 +11,7 @@
           </div>
       <div class="row">
         <div class="clinic text-center">
-          <span class="brand-primary font-semibold">Clinic Timings (9:30am to 6pm)</span>
+          <span class="brand-primary font-semibold">Clinic Timings - Mon - Fri 9.30 a.m. to 6.00 p.m, and Sat 9.30a.m. to 1.30 p.m</span>
         </div>
       </div>
 
@@ -22,7 +22,7 @@
 
             <div class="tardeo">
               <p class="brand-primary font-semibold">Head Office, Tardeo</p>
-              <span>432/432/403, Arun Chambers,</span>
+              <span>432/433/403, Arun Chambers,</span>
               <br>
               <span>Next to A/C Market,</span>
               <br>
