--- a/views/footer.html
+++ b/views/footer.html
@@ -32,7 +32,7 @@
               <a href="#/careers" title="Careers">Careers</a>
             </li>
             <li>
-              <a href="#contactus" title="Contact">Contact</a>
+              <a href="#contactus" title="Contact">Contact us</a>
             </li>
           </ul>
         </div>
