--- a/views/content/blog.html
+++ b/views/content/blog.html
@@ -4,7 +4,7 @@
     <h2 class="text-uppercase get-center white font-semibold">Blog</h2>
   </div>
   <div class="blog-page">
-    <div class="container" infinite-scroll='loadBlog()' infinite-scroll-distance="0" infinite-scroll-disabled="fasle">
+    <div class="container" infinite-scroll='loadBlog()' infinite-scroll-distance="0" infinite-scroll-disabled="false">
       <div class="get-inblog hidden-lg hidden-md">
         <form action="">
           <div class="form-group">
